// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct css for child: false, state: false, theme: dark and additionalDefaultJssStyle: %o 1`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "color": "#FBFCFF",
  "cursor": "pointer",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "auto",
  "hyphens": "auto",
  "margin": 0,
  "order": 1,
  "overflow": "visible",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: false, theme: dark and additionalDefaultJssStyle: %o 2`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "color": "#FBFCFF",
  "cursor": "pointer",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "auto",
  "hyphens": "auto",
  "margin": 0,
  "order": 1,
  "overflow": "visible",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: true, theme: dark and additionalDefaultJssStyle: %o 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#FBFCFF",
  "cursor": "pointer",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "1px",
  "hyphens": "auto",
  "margin": "-1px",
  "order": 1,
  "overflow": "hidden",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: true, theme: light and additionalDefaultJssStyle: %o 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#010205",
  "cursor": "pointer",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "1px",
  "hyphens": "auto",
  "margin": "-1px",
  "order": 1,
  "overflow": "hidden",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: light and additionalDefaultJssStyle: %o 1`] = `
{
  "@media(min-width:1000px)": {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "2px 0 0 8px",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media(min-width:1300px)": {
    "border": "0",
    "clip": "rect(1px,1px,1px,1px)",
    "clipPath": "inset(50%)",
    "height": "1px",
    "margin": "-1px",
    "overflow": "hidden",
    "padding": "2px 0 0 8px",
    "position": "absolute",
    "whiteSpace": "nowrap",
    "width": "auto",
  },
  "@media(min-width:1760px)": {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "2px 0 0 8px",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media(min-width:480px)": {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "2px 0 0 8px",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media(min-width:760px)": {
    "border": "0",
    "clip": "rect(1px,1px,1px,1px)",
    "clipPath": "inset(50%)",
    "height": "1px",
    "margin": "-1px",
    "overflow": "hidden",
    "padding": "2px 0 0 8px",
    "position": "absolute",
    "whiteSpace": "nowrap",
    "width": "auto",
  },
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#949598",
  "cursor": "default",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "1px",
  "hyphens": "auto",
  "margin": "-1px",
  "order": 1,
  "overflow": "hidden",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: false, theme: light and additionalDefaultJssStyle: %o 1`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "color": "#949598",
  "cursor": "default",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "auto",
  "hyphens": "auto",
  "margin": 0,
  "order": 1,
  "overflow": "visible",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: false, theme: light and additionalDefaultJssStyle: %o 2`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "color": "#949598",
  "cursor": "default",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "auto",
  "hyphens": "auto",
  "margin": 0,
  "order": 1,
  "overflow": "visible",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: true, theme: dark and additionalDefaultJssStyle: %o 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#7E7F82",
  "cursor": "default",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "1px",
  "hyphens": "auto",
  "margin": "-1px",
  "order": 1,
  "overflow": "hidden",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: true, theme: light and additionalDefaultJssStyle: %o 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#949598",
  "cursor": "default",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "height": "1px",
  "hyphens": "auto",
  "margin": "-1px",
  "order": 1,
  "overflow": "hidden",
  "overflowWrap": "break-word",
  "padding": "2px 0 0 8px",
  "paddingTop": "2px",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;
